test/error/parse/ExpectConstName.mod
MODULE ExpectConstName;
CONST = 1;
END ExpectConstName.
